# the-retinue

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile  Dockerfile.runner  README.md  STYLEGUIDE.md  docker-compose.yml  hello.py  pyproject.toml
.github/: heimdall.yml  retinue.yml
retinue/: __init__.py  adhoc_build.py  adhoc_drain.py  api.py  app.py  budget.py  classifier.py  config.py  container.py  container_build.py  cron.py  db.py  dedupe.py  done_check.py  gh.py  github_app.py  handoff.py  heartbeat.py  impl_retry.py  issues.py  lane.py  level.py  loopback.py  messages_api.py  notify.py  orchestrator.py  pipeline.py  pr_opener.py  queue.py  readiness.py  reconcile.py  repo_config.py  reviewer.py  roles.py  routing.py  run_ledger.py  scheduler.py  single_run.py  slicer.py  triage.py  (+4 more)
tests/: conftest.py  fakes.py  test_adhoc_build.py  test_adhoc_drain.py  test_adhoc_e2e.py  test_adhoc_invariants.py  test_api.py  test_budget.py  test_classifier.py  test_config.py  test_container_build.py  test_container_runtime.py  test_cron.py  test_dedupe.py  test_done_check.py  test_gh.py  test_github_app.py  test_handoff.py  test_health.py  test_heartbeat.py  test_impl_retry.py  test_issues.py  test_lane.py  test_level.py  test_loopback.py  test_notify.py  test_orchestrator.py  test_pipeline.py  test_pr_opener.py  test_prd_build.py  test_queue.py  test_readiness.py  test_reconcile.py  test_repo_config.py  test_reviewer.py  test_roles.py  test_roundtrip.py  test_routing.py  test_run_ledger.py  test_scheduler.py  (+6 more)
